[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/EnemyIdle.png" type="Texture" id=3]
[ext_resource path="res://ShowHealht.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.7032, 41.4193 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.037, 50.9437 )

[sub_resource type="CircleShape2D" id=4]
radius = 112.0

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Menus/Fonte/ARIALBD.TTF"

[sub_resource type="DynamicFont" id=6]
size = 15
use_filter = true
font_data = SubResource( 5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
rotation = -6.28319
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.33385, 0 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 16
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 7.937, 0.396851 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 2 )]
max_health = 1

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
modulate = Color( 1, 1, 1, 0.560784 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Control" parent="." instance=ExtResource( 4 )]

[node name="TextureRect" parent="Control" index="0"]
margin_left = -8.93241
margin_top = -50.8533
margin_right = 10.0676
margin_bottom = -30.8533

[node name="Label" parent="Control" index="1"]
margin_left = -7.69643
margin_top = -49.0893
margin_right = 9.30357
margin_bottom = -31.0893
custom_fonts/font = SubResource( 6 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Control"]
